--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -13,6 +13,10 @@ servers:
   #     - 192.168.0.1
   #   cmd: bin/jobs
 
+# Deployment timeouts
+deploy_timeout: 300  # Maximum time to wait for container to become healthy (seconds)
+drain_timeout: 30    # Time to wait for existing requests to complete before stopping old container (seconds)
+
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
@@ -20,6 +24,10 @@ servers:
 proxy:
   ssl: true
   host: api.highaspirationskc.org
+  healthcheck:
+    path: /up
+    interval: 10s
+    timeout: 5s
 
 # Credentials for your image host.
 registry:
